app/assets/styles/asylum/icons.css
@charset "UTF-8";

@font-face {
  font-family: "asylumconnect";
  src:url("/static/asylum-assets/fonts/asylumconnect.eot");
  src:url("/static/asylum-assets/fonts/asylumconnect.eot?#iefix") format("embedded-opentype"),
    url("/static/asylum-assets/fonts/asylumconnect.woff") format("woff"),
    url("/static/asylum-assets/fonts/asylumconnect.ttf") format("truetype"),
    url("/static/asylum-assets/fonts/asylumconnect.svg#asylumconnect") format("svg");
  font-weight: normal;
  font-style: normal;

}

.icons {
  display: flex;
}

[data-icon]:before {
  font-family: "asylumconnect" !important;
  content: attr(data-icon);
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icons [class^="icon-"],
[class*=" icon-"] {
  display: flex;
  border-radius: 15px;
  background-color: #000000;
  padding: 0px;
  margin-right: 10px;
}

.icons [class^="icon-"]:before,
[class*=" icon-"]:before {
  background-color: #FFFFFF;
  border-radius: 26px;
  width: 24px;
  height: 26px;
  cursor: pointer;
  cursor: hand;
}

[class^="expand-icon-"] {
  display: none;
  font-size: 14px;
  color: #ffffff;
  align-self: center;
  white-space: nowrap;
  margin: 3px 15px 3px 5px;
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
  font-family: "asylumconnect" !important;
  font-style: normal !important;
  font-weight: normal !important;
  font-variant: normal !important;
  text-transform: none !important;
  speak: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.is-expanded:before {
  height: 24px;
}

.fix-height {
  height: 26px;
}

.subcategory-container {
  display: none;
  background-color: #fff;
  border-color: #ccc;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  padding: 5px 10px;
  margin-top: 6px;
  font-size: 14px;
}

.subcategory-is-expanded {
  display: flex;
  flex-direction: column;
}

.icon-medical {
  color: #ed1b24;
}
.icons .icon-medical {
  background-color: #ed1b24;
}
.icon-legal {
  color: #f15b29;
}
.icons .icon-legal {
  background-color: #f15b29;
}
.icon-housing {
  color: #f8931f;
}
.icons .icon-housing {
  background-color: #f8931f;
}
.icon-food {
  color: #f8cb18;
}
.icons .icon-food {
  background-color: #f8cb18;
}
.icon-hygiene {
  color: #aed137;
}
.icons .icon-hygiene {
  background-color: #aed137;
}
.icon-computers {
  color: #62bb47;
}
.icons .icon-computers {
  background-color: #62bb47;
}
.icon-employment {
  color: #009343;
}
.icons .icon-employment {
  background-color: #009343;
}
.icon-education {
  color: #4b72b7;
}
.icons .icon-education {
  background-color: #4b72b7;
}
.icon-community {
  color: #3bbfef;
}
.icons .icon-community {
  background-color: #3bbfef;
}
.icon-mental-health {
  color: #5b54a4;
}
.icons .icon-mental-health {
  background-color: #5b54a4;
}
.icon-mail {
  color: #a87b51;
}
.icons .icon-mail {
  background-color: #a87b51;
}
.icon-recreation {
  color: #744c29;
}
.icons .icon-recreation {
  background-color: #744c29;
}

.icon-computers:before {
  content: "\61";
}
.icon-mental-health:before {
  content: "\62";
}
.icon-education:before {
  content: "\63";
}
.icon-housing:before {
  content: "\66";
}
.icon-hygiene:before {
  content: "\67";
}
.icon-legal:before {
  content: "\68";
}
.icon-medical:before {
  content: "\6a";
}
.icon-recreation:before {
  content: "\6b";
}
.icon-food:before {
  content: "\64";
}
.icon-mail:before {
  content: "\65";
}
.icon-employment:before {
  content: "\69";
}
.icon-community:before {
  content: "\6c";
}
.icon-is-free:before {
  content: "\6d";
}
.icon-has-a-confidentiality-policy:before {
  content: "\6e";
}
.icon-has-translation-services:before {
  content: "\6f";
}
.icon-report:before {
  content: "\70";
}

